added new photos

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
      <header>
           <nav id="nav">
                <ul id="navList">
-                    <img src="View/Images/logo_milushev.png" alt="logo" id="logo">
-                    <li><a href="#homePage">За нас</a></li>
+                    <a href="#homePage" id="logo_link"><img src="View/Images/logo_milushev.png" alt="logo" id="logo"></a>
+                    <li><a href="#homePage">Начало</a></li>
                     <li><a href="#gallery">Галерия</a></li>
                     <li><a href="#projects">Завършени обекти</a></li>
                     <li><a href="#activities">Дейност</a></li>
@@ -121,31 +121,15 @@
 
                <div id="homePage_text">
                     <div id="homePage-text-title">
-                         <h1>Мулушеви строй</h1>
+                         <h1>MilushevStroy</h1>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus error asperiores doloremque
-                         quos sapiente officia odio esse pariatur sit adipisci! Iusto distinctio illum facilis
-                         recusandae aliquid quos repellendus quisquam corporis!</p>
-                    <div class="homePage_card_container">
-                         <div class="homePage_card_img">
-                              <img src="images-personal-data/багер.jpg" alt="img">
-                         </div>
-                         <div>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nam laudantium provident
-                                   tenetur nulla molestiae repellat hic voluptatum ipsam! Commodi deserunt nihil
-                                   obcaecati doloribus exercitationem laboriosam culpa id veniam velit.</p>
-                         </div>
-                    </div>
-                    <div class="homePage_card_container">
-                         <div>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nam laudantium provident
-                                   tenetur nulla molestiae repellat hic voluptatum ipsam! Commodi deserunt nihil
-                                   obcaecati doloribus exercitationem laboriosam culpa id veniam velit.</p>
-                         </div>
-                         <div class="homePage_card_img">
-                              <img src="images-personal-data/двор-паркинг.jpg" alt="img">
-                         </div>
-                    </div>
+               </div>
+               
+               <div class="grid_container">
+                  <div class="grid_item_1"></div>
+                  <div class="grid_item_2"><h2>Стъпете на сигурно</h2></div>
+                  <div class="grid_item_3"></div>
+                
                </div>
           </div>
 
@@ -396,24 +380,26 @@
                          <!-- <img src="free_test_img/church-2264661_1280.jpg" alt="sofiq-img"> -->
                          <div class="contact-text-container">
                               <p>гр.София</p>
-                              <p>asdasdadsad</p>
-                              <p>asdasdadsad</p>
-                              <p>asdasdadsad</p>
-                              <p>asdasdadsad</p>
+                              <p>address</p>
+                              <p>name 1</p>
+                              <p>phone </p>
+                              <p>name 2 </p>
+                              <p>phone</p>
+                              <p>mail + social media</p>
                          </div>
                     </div>
 
                </div>
           </div>
 
-          <!-- ERROR PAGE - not included (use homepage instead)-->
+          <!-- ERROR PAGE - NOT INCLUDED-->
           <div class="section" id="errorPage">
                <h1>ERROR 404</h1>
           </div>
      </div>
 
      <div class="footer">
-          <p>website created by Nikola Balkov <img src="View/Images/beer.svg" alt="sun_icon"> </p>
+          <p>website created by Nikola Balkov </p>
      <div>
 
 
